css changes- tools 12:06 10-06-2016

--- a/docroot/sites/all/themes/oira_frontend/css/override.css
+++ b/docroot/sites/all/themes/oira_frontend/css/override.css
@@ -10,7 +10,7 @@
 }
 #mini-panel-related_content > div  .panels-flexible-column {
     display: table-cell;
-    padding: 0 15px;
+    padding: 15px 30px;
 }
 
 .article-content-container {
