--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6740,6 +6740,14 @@ input,
 select {
   box-shadow: none !important;
 }
+a {
+  text-decoration: none !important;
+}
+h1 {
+  font-family: 'Oswald';
+  font-size: 2.6em;
+  border-bottom: none !important;
+}
 h2 {
   color: #58585a;
   font-family: 'Oswald';
@@ -7087,6 +7095,14 @@ a.more-link:before {
 /*END WHAT'S NEW*/
 /*OIRA TOOLS
 **************************************************************/
+.page-oira-tools h1 {
+  color: #786586;
+}
+.page-oira-tools .pane-node-body .field-type-text-with-summary {
+  font-family: 'Oswald';
+  font-size: 1.6em;
+  margin-bottom: 30px;
+}
 .page-oira-tools .panels-flexible-row-new-1 {
   background: url('../images/background-two-colors.png') repeat-y 50%;
   padding-bottom: 0px;
@@ -7098,21 +7114,159 @@ a.more-link:before {
   background-color: #786586;
   color: #ffffff;
   padding-right: 30px;
+  padding-top: 30px;
+  position: relative;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-textfield {
+  float: left;
+  margin-bottom: 15px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-textfield input {
+  border: none;
+  border-radius: 0px;
+  outline: none;
+  height: auto;
+  padding-right: 35px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column #edit-submit {
+  position: absolute;
+  right: 0;
+  margin-right: 30px;
+  color: #786586;
+  border: none;
+  border-radius: 0px;
+  outline: none;
+  width: 35px;
+  line-height: 19px;
+  font-size: 1.2em;
+  padding-left: 7px;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0);
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column #edit-submit:before {
+  content: "\e003";
+  font-family: "Glyphicons Halflings";
+  margin-right: 30px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column a.active {
+  display: block;
+  color: #ffffff;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column a.active span:before {
+  color: #786586;
+  padding: 1px;
+  font-size: 0.7em;
+  margin-right: 10px;
+  background-color: #ffffff;
+  display: block;
+  width: 13px;
+  height: 13px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column #edit-field-country label:after,
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column #edit-field-languagevalue label:after,
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column #edit-field-sector label:after {
+  content: none;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-checkboxes {
+  border-top: 2px solid #ffffff;
+  padding-top: 10px;
+  clear: both;
+  margin-top: 15px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-checkboxes input.form-checkbox {
+  display: none;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-checkboxes label {
+  padding-left: 0px;
+  margin-bottom: 0px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-checkboxes label:first-child {
+  font-family: 'Oswald';
+  font-size: 1.2em;
+  font-weight: normal;
+  display: block;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-checkboxes label:after {
+  content: "\e250";
+  font-family: "Glyphicons Halflings";
+  margin-left: 10px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-type-checkboxes .label-row:after {
+  content: "\e252";
+  font-family: "Glyphicons Halflings";
+  margin-left: 10px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-left-column .form-item-field-sector {
+  border-bottom: 2px solid #ffffff;
 }
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content {
   background-color: #dfd8e4;
   padding-bottom: 50px;
   padding-left: 30px;
+  padding-top: 30px;
   border-left: 5px solid #ffffff;
 }
-.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .node-practical-tool {
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content #edit-sort-fieldset {
+  border: none;
+  border-radius: 0px;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: none;
+  border-top: 2px solid #786586;
+  border-bottom: 2px solid #786586;
+  margin-bottom: 30px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content #edit-sort-fieldset .panel-body {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content #edit-sort-fieldset .sort-container {
+  min-width: 210px;
+  padding-left: 0px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content #edit-sort-fieldset .sort-container label {
+  font-weight: 100;
+  font-size: 0.9em;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content #edit-sort-fieldset .sort-container label:after {
+  content: ": ";
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content #edit-sort-fieldset .sort-container #edit-sort {
+  font-size: 0.9em;
+  display: inline-block;
+  width: auto;
+  padding: 0;
+  border: none;
+  padding-bottom: 1px;
+  font-weight: bold;
+  height: initial;
+  background-color: rgba(0, 0, 0, 0);
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content #edit-sort-fieldset .count-container {
+  font-size: 0.9em;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper {
+  background-color: #ffffff;
+  padding: 30px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool {
   border-top: 2px solid #786586;
   padding: 30px 0px;
   margin-right: 0px;
   margin-left: 0px;
 }
-.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .node-practical-tool .col-sm-3 {
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .col-sm-3 {
   padding-left: 0px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-title-field {
+  font-size: 1.4em;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool a.more-link {
+  text-align: left;
+  margin-top: 25px;
 }
 /*FOOTER
 ********************************************/
