css changes - news list 15/06/2016 8:21

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -224,8 +224,8 @@ a.more-link{
 			display: inline-block;
 		    background-color: red;//testing por ahora
 		    width: 25px;
-		    height: 25px;//testing
-		    overflow: hidden;//lala
+		    height: 25px;
+		    overflow: hidden;
 		}
 		.label{
 			display: none;
