--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -752,7 +752,7 @@ a.more-link{
 /*END OIRA TOOLS*/
 
 
-<<<<<<< HEAD
+
 /*FAQ'S
 **************************************************************/
 
@@ -805,6 +805,8 @@ a.more-link{
 							content:"\e253";
 			    			font-family: "Glyphicons Halflings";
 			    			padding-left: 10px;
+			    			position: absolute;
+			    			top: 9px;
 						}
 					}				
 				}	
@@ -819,6 +821,8 @@ a.more-link{
 							content: "\e252";
 			    			font-family: "Glyphicons Halflings";
 			    			padding-left: 10px;
+			    			position: absolute;
+			    			top: 9px;
 						}
 					}				
 				}	
@@ -838,7 +842,7 @@ a.more-link{
 
 
 /*END FAQ'S*/
-=======
+
 /*OIRA NEWS
 *************************************************************/
 h1{
@@ -851,7 +855,7 @@ h1{
 	}
 	article{
 		padding-top: 30px;
-    	padding-bottom: 30px;
+    	padding-bottom: 30px; 
     	.title_field{
     		margin-bottom: 15px;
     		a{
@@ -910,4 +914,4 @@ h1{
 	}
 }
 /*END OIRA NEWS*/
->>>>>>> 28e061482bc1ceb759839e809ba3d4d4ec174ca2
+
